0.8.0/_sources/api/skimage.transform.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`transform`
========================
.. automodule:: skimage.transform

.. currentmodule:: skimage.transform

:class:`AffineTransform`
------------------------


.. autoclass:: AffineTransform
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

:class:`PiecewiseAffineTransform`
---------------------------------


.. autoclass:: PiecewiseAffineTransform
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

:class:`PolynomialTransform`
----------------------------


.. autoclass:: PolynomialTransform
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

:class:`ProjectiveTransform`
----------------------------


.. autoclass:: ProjectiveTransform
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

:class:`SimilarityTransform`
----------------------------


.. autoclass:: SimilarityTransform
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__
.. autosummary::

   skimage.transform.estimate_transform
   skimage.transform.frt2
   skimage.transform.hough
   skimage.transform.hough_circle
   skimage.transform.hough_line
   skimage.transform.hough_peaks
   skimage.transform.ifrt2
   skimage.transform.integral_image
   skimage.transform.integrate
   skimage.transform.iradon
   skimage.transform.probabilistic_hough
   skimage.transform.pyramid_expand
   skimage.transform.pyramid_gaussian
   skimage.transform.pyramid_laplacian
   skimage.transform.pyramid_reduce
   skimage.transform.radon
   skimage.transform.rescale
   skimage.transform.resize
   skimage.transform.rotate
   skimage.transform.swirl
   skimage.transform.warp
   skimage.transform.warp_coords

estimate_transform
------------------

.. autofunction:: skimage.transform.estimate_transform

frt2
----

.. autofunction:: skimage.transform.frt2

hough
-----

.. autofunction:: skimage.transform.hough

hough_circle
------------

.. autofunction:: skimage.transform.hough_circle

hough_line
----------

.. autofunction:: skimage.transform.hough_line

hough_peaks
-----------

.. autofunction:: skimage.transform.hough_peaks

ifrt2
-----

.. autofunction:: skimage.transform.ifrt2

integral_image
--------------

.. autofunction:: skimage.transform.integral_image

integrate
---------

.. autofunction:: skimage.transform.integrate

iradon
------

.. autofunction:: skimage.transform.iradon

probabilistic_hough
-------------------

.. autofunction:: skimage.transform.probabilistic_hough

pyramid_expand
--------------

.. autofunction:: skimage.transform.pyramid_expand

pyramid_gaussian
----------------

.. autofunction:: skimage.transform.pyramid_gaussian

pyramid_laplacian
-----------------

.. autofunction:: skimage.transform.pyramid_laplacian

pyramid_reduce
--------------

.. autofunction:: skimage.transform.pyramid_reduce

radon
-----

.. autofunction:: skimage.transform.radon

rescale
-------

.. autofunction:: skimage.transform.rescale

resize
------

.. autofunction:: skimage.transform.resize

rotate
------

.. autofunction:: skimage.transform.rotate

swirl
-----

.. autofunction:: skimage.transform.swirl

warp
----

.. autofunction:: skimage.transform.warp

warp_coords
-----------

.. autofunction:: skimage.transform.warp_coords

