0.10.x/_sources/api/skimage.transform.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`transform`
========================
.. automodule:: skimage.transform

.. currentmodule:: skimage.transform

:class:`AffineTransform`
------------------------


.. autoclass:: AffineTransform
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

:class:`PiecewiseAffineTransform`
---------------------------------


.. autoclass:: PiecewiseAffineTransform
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

:class:`PolynomialTransform`
----------------------------


.. autoclass:: PolynomialTransform
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

:class:`ProjectiveTransform`
----------------------------


.. autoclass:: ProjectiveTransform
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

:class:`SimilarityTransform`
----------------------------


.. autoclass:: SimilarityTransform
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__
.. autosummary::

   skimage.transform.downscale_local_mean
   skimage.transform.estimate_transform
   skimage.transform.frt2
   skimage.transform.hough_circle
   skimage.transform.hough_ellipse
   skimage.transform.hough_line
   skimage.transform.hough_line_peaks
   skimage.transform.ifrt2
   skimage.transform.integral_image
   skimage.transform.integrate
   skimage.transform.iradon
   skimage.transform.iradon_sart
   skimage.transform.matrix_transform
   skimage.transform.probabilistic_hough_line
   skimage.transform.pyramid_expand
   skimage.transform.pyramid_gaussian
   skimage.transform.pyramid_laplacian
   skimage.transform.pyramid_reduce
   skimage.transform.radon
   skimage.transform.rescale
   skimage.transform.resize
   skimage.transform.rotate
   skimage.transform.swirl
   skimage.transform.warp
   skimage.transform.warp_coords

downscale_local_mean
--------------------

.. autofunction:: skimage.transform.downscale_local_mean

estimate_transform
------------------

.. autofunction:: skimage.transform.estimate_transform

frt2
----

.. autofunction:: skimage.transform.frt2

hough_circle
------------

.. autofunction:: skimage.transform.hough_circle

hough_ellipse
-------------

.. autofunction:: skimage.transform.hough_ellipse

hough_line
----------

.. autofunction:: skimage.transform.hough_line

hough_line_peaks
----------------

.. autofunction:: skimage.transform.hough_line_peaks

ifrt2
-----

.. autofunction:: skimage.transform.ifrt2

integral_image
--------------

.. autofunction:: skimage.transform.integral_image

integrate
---------

.. autofunction:: skimage.transform.integrate

iradon
------

.. autofunction:: skimage.transform.iradon

iradon_sart
-----------

.. autofunction:: skimage.transform.iradon_sart

matrix_transform
----------------

.. autofunction:: skimage.transform.matrix_transform

probabilistic_hough_line
------------------------

.. autofunction:: skimage.transform.probabilistic_hough_line

pyramid_expand
--------------

.. autofunction:: skimage.transform.pyramid_expand

pyramid_gaussian
----------------

.. autofunction:: skimage.transform.pyramid_gaussian

pyramid_laplacian
-----------------

.. autofunction:: skimage.transform.pyramid_laplacian

pyramid_reduce
--------------

.. autofunction:: skimage.transform.pyramid_reduce

radon
-----

.. autofunction:: skimage.transform.radon

rescale
-------

.. autofunction:: skimage.transform.rescale

resize
------

.. autofunction:: skimage.transform.resize

rotate
------

.. autofunction:: skimage.transform.rotate

swirl
-----

.. autofunction:: skimage.transform.swirl

warp
----

.. autofunction:: skimage.transform.warp

warp_coords
-----------

.. autofunction:: skimage.transform.warp_coords

